# EDA

./: .gitignore
LAB01/: dimensionalidad.cpp  distances_dim_10.txt  distances_dim_100.txt  distances_dim_1000.txt  distances_dim_2000.txt  distances_dim_50.txt  distances_dim_500.txt  distances_dim_5000.txt  histogram_outputs.ipynb
LAB02/: LAB02.ipynb
LAB03/OctreeImplementation/: CMakeLists.txt  Octree.cpp  Octree.hpp  OctreeImplementation.cpp  Point.hpp  README.md
LAB03/OctreeImplementation/data/: test.csv
LAB04/: kd-tree-impl.cpp  kd-tree.cpp  kd-tree.hpp  tiempos_ejecucion.csv
